Botão do rodape inserido.

--- a/Azure Site Replicado/index.html
+++ b/Azure Site Replicado/index.html
@@ -29,7 +29,6 @@
         
         <h2 class="h2Centro">Invente com propósito</h2>
         <h3 class="h3Centro">Capacite seu espírito criativo para transformar ideias em resultados</h3>
-
         <p class="botaoCentro">Início gratuito ></p>
         <img src="/Azure Site Replicado/images/imagem1.jpg">
     </div>
@@ -76,7 +75,8 @@
         </div>
     </div>
     <div class="containerMapa">
-
+        <img src="/Azure Site Replicado/images/mapa_azure.jpg">
+        <p class="botaoMapa">Saiba mais sobre a infraestrutura globar do azure ></p>
     </div>
     
 </body>
