Finalizado cabeçalho e iniciado a área de informações

--- a/Azure Site Replicado/index.html
+++ b/Azure Site Replicado/index.html
@@ -10,21 +10,22 @@
   <body>
     <div class="containerTopo">
       <div>
-        <div class="logoContato">
-          <img class="imagemLogo" src="/Azure Site Replicado/images/logo.jpg" />
-          <p>
+        <div class="topoContato">
+          <img class="boxImagem" src="/Azure Site Replicado/images/logo.jpg" />
+          <p class="boxTopoVazio"></p>
+          <p class="box1Topo">
             Contatar Vendas: 0800-047-4894
           </p>
-          <p>
+          <p class="box2Topo">
             Pesquisa
           </p>
-          <p>
+          <p class="box3Topo">
             Minha conta
           </p>
-          <p>
+          <p class="box4Topo">
             Portal
           </p>
-          <p>
+          <p class="box5Topo">
             login
           </p>
         </div>
@@ -105,6 +106,38 @@
       <p class="botaoMapa">
         Saiba mais sobre a infraestrutura globar do azure >
       </p>
+    </div>
+    <div class="containerInformacoes">
+      <div class="informacoesTitulo">
+        <p>A nuvem em que você pode confiar, com números para comprovar</p>
+      </div>
+      <div class="informacoesDados">
+        <div class="box1Informacoes">
+          <h2>
+            90+
+          </h2>
+          <p>
+            ofertas de conformidade: o maior portfólio do setor
+          </p>
+        </div>
+        <div class="box2Informacoes">
+          <h2>
+            95%
+          </h2>
+          <p>
+            das empresas da Fortune 500 confiam em seus negócio no Azure
+          </p>
+        </div>
+        <div class="box3Informacoes">
+          <h2>
+            $1 billion
+          </h2>
+          <p>
+            investimento (doláres americanos) por ano em segurança para proteger
+            dados de clientes de ameaças cibernéticas
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
