--- a/Azure Site Replicado/index.html
+++ b/Azure Site Replicado/index.html
@@ -102,10 +102,17 @@
       </div>
     </div>
     <div class="containerMapa">
-      <img src="/Azure Site Replicado/images/mapa_azure.jpg" />
-      <p class="botaoMapa">
-        Saiba mais sobre a infraestrutura globar do azure >
-      </p>
+      <div>
+        <img
+          class="imagemMapa"
+          src="/Azure Site Replicado/images/mapa_azure.jpg"
+        />
+      </div>
+      <div>
+        <p class="botaoMapa">
+          Saiba mais sobre a infraestrutura globar do azure >
+        </p>
+      </div>
     </div>
     <div class="containerInformacoes">
       <div class="informacoesTitulo">
